--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         }
 
         #container .rule .body p {
-            margin: 4px;
+            margin: 8px 2px;
             font-size: 14px;
         }
     </style>
@@ -54,10 +54,10 @@
         <div id="container">
 
             <div class="rule">
-                <div class="subtitle">about the mun.</div>
+                <div class="subtitle">WIP.</div>
                 <div class="body">
-                    <p>One.</p>
-                    <p>Two.</p>
+                    <p>this is a placeholder for kuunai's about page.</p>
+                    <p>i'll probably add to this and keep it relatively up to date, but i plan on making a full interactive landing site for a biography, relationships, etc.</p>
                 </div>
             </div>
 
