--- a/relationships.html
+++ b/relationships.html
@@ -23,7 +23,7 @@
             <akali>
                 <name>Akali Jhomen Tethi</name>
                 <desc>
-                    <p style="font-size: 0.88vw; padding-bottom: 32px; margin-bottom: 32px; border-bottom: solid #FFF4 1px;">( DISCLAIMER: all relationships found here are based on my own canon / past interactions. you are under absolutely no obligation to portray your muse as you see them here. for the sake of clarity, please let me know if your portrayal <b>does</b> take from this page, else i'll assume your own canon. )</p>
+                    <p style="font-size: 14px; padding-bottom: 32px; margin-bottom: 32px; border-bottom: solid #FFF4 1px;">( DISCLAIMER: all relationships found here are based on my own canon / past interactions. you are under absolutely no obligation to portray your muse as you see them here. for the sake of clarity, please let me know if your portrayal <b>does</b> take from this page, else i'll assume your own canon. )</p>
                     <p>
                         <b>name:</b> akali jhomen tethi.
                         <br><b>alias(es):</b> neon ninja, rogue, 힙합검객.
