--- a/relationships.html
+++ b/relationships.html
@@ -32,7 +32,7 @@
                         <b>age:</b> 25.
                         <br><b>height:</b> 5'10.
                         <br><b>weight:</b> 140lbs.
-                        <br><b>gender:</b> transgender woman - pre-op.
+                        <br><b>gender:</b> transgender female - pre-op.
                     </p>
 
                     <spacer></spacer>
