--- a/relationships.html
+++ b/relationships.html
@@ -38,9 +38,8 @@
                     <spacer></spacer>
                     <divider>EARLY LIFE</divider>
 
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ultricies, risus non consequat sagittis, est ex convallis est, vitae sollicitudin magna neque sit amet dolor. In a libero nec nisi molestie tempor eu a arcu. Sed non gravida sem. Nulla lacinia, risus quis sodales feugiat, enim mi ullamcorper massa, et placerat ligula velit non tortor. Suspendisse sit amet urna nunc. Maecenas hendrerit, nunc aliquam tristique dictum, velit arcu mattis eros, eu ultricies nunc dolor rhoncus felis. Sed ac velit arcu. Nulla efficitur pretium nibh ac mollis. Aliquam faucibus ornare justo. Vestibulum tincidunt risus vitae ante vehicula, quis tincidunt ante facilisis.
-                    </p>
+                    <p>jeez, where do i begin?</p>
+                    <p></p>
 
                     <spacer></spacer>
                     <divider>STARDOM</divider>
