--- a/relationships.html
+++ b/relationships.html
@@ -87,7 +87,7 @@
                     <p>in all the years i've been around, i've never been great at showing my appreciation for you, for anything really, so ... thank you, so much.</p>
                     <p>thanks for being there for me when i couldn't be there for myself, both as a partner and as a friend. thanks for teaching me how to dance, for showing me that there was more to life than just staring at the same four walls waiting for a spark.</p>
                     <p>thank you for following and supporting me during my time as a part of k/da, when i took a break to involve myself in true damage, shit, even after i packed my bags and turned my back on you all. thank you for coming when i was asked to open for pentakill, you'll never know how much that meant to me, and ... thank your girlfriend too. she seems nice. <s>i hope she can give you everything that i couldn't.</s></p>
-                    <img src="./img/kaikali.png"></img>
+                    <p><img src="./img/kaikali.png"></img></p>
                 </desc>
             </kaisa>
             
