--- a/kuunai.html
+++ b/kuunai.html
@@ -1,3 +1,20 @@
 <html>
-    
+    <head>
+
+    </head>
+
+    <style>
+        a {
+            display: inline-block;
+            width: 100%;
+
+            font-size: 40px;
+            text-align: center;
+        }
+    </style>
+
+    <body>
+        <a href="./about.html">About Akali</a>
+        <a href="./tuneterra/tuneterra.html">Discography</a>
+    </body>
 </html>
